# axum-challenges

./: Cargo.toml  README.md
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/ctx/: mod.rs
src/model/: error.rs  mod.rs
src/web/: mw_auth.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
tests/: quick_dev.rs
web/: index.html
